--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-    <script type="text/javascript" src="Fabriken/AbstractFabrik.js"></script>
+    <script type="text/javascript" src="Tiles/AbstractTile.js"></script>
+    <script type="text/javascript" src="Tiles/Sand.js"></script>
+    <script type="text/javascript" src="Tiles/Wald.js"></script>
+    <script type="text/javascript" src="Tiles/Wasser.js"></script>
+
     <script type="text/javascript" src="Fabriken/AbstractFabrik.js"></script>
     <script type="text/javascript" src="Fabriken/Holzfaeller.js"></script>
     <script type="text/javascript" src="Fabriken/Kohlewerk.js"></script>
@@ -21,7 +25,6 @@
     <script type="text/javascript" src="Rohstoffe/Holz.js"></script>
     <script type="text/javascript" src="Rohstoffe/Kohle.js"></script>
     <script type="text/javascript" src="Rohstoffe/Stein.js"></script>
-
     <script type="text/javascript" src="main.js"></script>
 
 
