--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     <script type="text/javascript" src="Tiles/Wasser.js"></script>
 
     <script type="text/javascript" src="Fabriken/AbstractFabrik.js"></script>
+    <script type="text/javascript" src="Fabriken/Saegewerk.js"></script>
     <script type="text/javascript" src="Fabriken/Holzfaeller.js"></script>
     <script type="text/javascript" src="Fabriken/Kohlewerk.js"></script>
     <script type="text/javascript" src="Fabriken/Steinmetz.js"></script>
     <script type="text/javascript" src="Rohstoffe/AbstractRohstoff.js"></script>
     <script type="text/javascript" src="Rohstoffe/Holz.js"></script>
+    <script type="text/javascript" src="Rohstoffe/Brett.js"></script>
     <script type="text/javascript" src="Rohstoffe/Kohle.js"></script>
     <script type="text/javascript" src="Rohstoffe/Stein.js"></script>
     <script type="text/javascript" src="main.js"></script>
