Karte grundlegend erstellt

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+    <script type="text/javascript" src="Karte/Karte.js"></script>
+    <script type="text/javascript" src="Karte/Kartengenerator.js"></script>
+
+
     <script type="text/javascript" src="Tiles/AbstractTile.js"></script>
     <script type="text/javascript" src="Tiles/Sand.js"></script>
     <script type="text/javascript" src="Tiles/Wald.js"></script>
