--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="Karte/Karte.js"></script>
     <script type="text/javascript" src="Karte/Kartengenerator.js"></script>
 
+    <script type="text/javascript" src="collide2d.js"></script>
 
     <script type="text/javascript" src="Tiles/AbstractTile.js"></script>
     <script type="text/javascript" src="Tiles/Sand.js"></script>
