Map erweitert, tiles hinzugefügt

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <script type="text/javascript" src="Tiles/Sand.js"></script>
     <script type="text/javascript" src="Tiles/Wald.js"></script>
     <script type="text/javascript" src="Tiles/Wasser.js"></script>
+    <script type="text/javascript" src="Tiles/Gebirge.js"></script>
+    <script type="text/javascript" src="Tiles/Schnee.js"></script>
+    <script type="text/javascript" src="Tiles/Lava.js"></script>
+    <script type="text/javascript" src="Tiles/Regenwald.js"></script>
 
     <script type="text/javascript" src="Fabriken/AbstractFabrik.js"></script>
     <script type="text/javascript" src="Fabriken/Saegewerk.js"></script>
