--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script type="text/javascript" src="Lager.js"></script>
+
     <script type="text/javascript" src="Karte/Karte.js"></script>
     <script type="text/javascript" src="Karte/Kartengenerator.js"></script>
+
+    <script type="text/javascript" src="UI/MainUI.js"></script>
 
     <script type="text/javascript" src="collide2d.js"></script>
 
