--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <script type="text/javascript" src="Tiles/Lava.js"></script>
     <script type="text/javascript" src="Tiles/Regenwald.js"></script>
 
+    <script type="text/javascript" src="Haus/AbstractHaus.js"></script>
+    <script type="text/javascript" src="Haus/Farmer.js"></script>
+
     <script type="text/javascript" src="Fabriken/AbstractFabrik.js"></script>
     <script type="text/javascript" src="Fabriken/Saegewerk.js"></script>
     <script type="text/javascript" src="Fabriken/Holzfaeller.js"></script>
