--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="Karte/Kartengenerator.js"></script>
 
     <script type="text/javascript" src="UI/MainUI.js"></script>
+    <script type="text/javascript" src="UI/BauUI.js"></script>
 
     <script type="text/javascript" src="collide2d.js"></script>
 
