Ini comit für Gebaude UI

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <script type="text/javascript" src="UI/MainUI.js"></script>
     <script type="text/javascript" src="UI/BauUI.js"></script>
+    <script type="text/javascript" src="UI/GebaudeUI.js"></script>
 
     <script type="text/javascript" src="collide2d.js"></script>
 
