--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="Tiles/Schnee.js"></script>
     <script type="text/javascript" src="Tiles/Lava.js"></script>
     <script type="text/javascript" src="Tiles/Regenwald.js"></script>
+    <script type="text/javascript" src="Tiles/Wiese.js"></script>
 
     <script type="text/javascript" src="Haus/AbstractHaus.js"></script>
     <script type="text/javascript" src="Haus/Farmer.js"></script>
