farmer brauchen fisch + bissle balancing

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
     <script type="text/javascript" src="Fabriken/Holzfaeller.js"></script>
     <script type="text/javascript" src="Fabriken/Kohlewerk.js"></script>
     <script type="text/javascript" src="Fabriken/Steinmetz.js"></script>
+    <script type="text/javascript" src="Fabriken/Fischer.js"></script>
     <script type="text/javascript" src="Rohstoffe/AbstractRohstoff.js"></script>
     <script type="text/javascript" src="Rohstoffe/Holz.js"></script>
     <script type="text/javascript" src="Rohstoffe/Brett.js"></script>
     <script type="text/javascript" src="Rohstoffe/Kohle.js"></script>
     <script type="text/javascript" src="Rohstoffe/Stein.js"></script>
+    <script type="text/javascript" src="Rohstoffe/Fisch.js"></script>
     <script type="text/javascript" src="main.js"></script>
 
 
