--- a/Server/Client/index.html
+++ b/Server/Client/index.html
@@ -7,6 +7,7 @@
 
 
     <script type="text/javascript"></script>
+
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" ></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.js"></script>
@@ -46,11 +47,16 @@
     <script type="text/javascript" src="Rohstoffe/Kohle.js"></script>
     <script type="text/javascript" src="Rohstoffe/Stein.js"></script>
     <script type="text/javascript" src="main.js"></script>
-
-
+    <script src="/socket.io/socket.io.js"></script>
     <style>
     </style>
   </head>
   <body>
+
+        <script>
+          var socket = io();
+
+        </script>
   </body>
+
 </html>
