--- a/index.html
+++ b/index.html
@@ -32,21 +32,28 @@
     <script type="text/javascript" src="Tiles/Lava.js"></script>
     <script type="text/javascript" src="Tiles/Regenwald.js"></script>
 
-    <script type="text/javascript" src="Haus/AbstractHaus.js"></script>
-    <script type="text/javascript" src="Haus/Farmer.js"></script>
 
-    <script type="text/javascript" src="Fabriken/AbstractFabrik.js"></script>
-    <script type="text/javascript" src="Fabriken/Saegewerk.js"></script>
-    <script type="text/javascript" src="Fabriken/Holzfaeller.js"></script>
-    <script type="text/javascript" src="Fabriken/Kohlewerk.js"></script>
-    <script type="text/javascript" src="Fabriken/Steinmetz.js"></script>
-    <script type="text/javascript" src="Fabriken/Fischer.js"></script>
     <script type="text/javascript" src="Rohstoffe/AbstractRohstoff.js"></script>
     <script type="text/javascript" src="Rohstoffe/Holz.js"></script>
     <script type="text/javascript" src="Rohstoffe/Brett.js"></script>
     <script type="text/javascript" src="Rohstoffe/Kohle.js"></script>
     <script type="text/javascript" src="Rohstoffe/Stein.js"></script>
     <script type="text/javascript" src="Rohstoffe/Fisch.js"></script>
+    <script type="text/javascript" src="Rohstoffe/Weintraube.js"></script>
+
+    <script type="text/javascript" src="Haus/AbstractHaus.js"></script>
+    <script type="text/javascript" src="Haus/Farmer.js"></script>
+    <script type="text/javascript" src="Haus/Buerger.js"></script>
+
+
+    <script type="text/javascript" src="Fabriken/AbstractFabrik.js"></script>
+    <script type="text/javascript" src="Fabriken/Saegewerk.js"></script>
+    <script type="text/javascript" src="Fabriken/Traubenfarm.js"></script>
+    <script type="text/javascript" src="Fabriken/Holzfaeller.js"></script>
+    <script type="text/javascript" src="Fabriken/Kohlewerk.js"></script>
+    <script type="text/javascript" src="Fabriken/Steinmetz.js"></script>
+    <script type="text/javascript" src="Fabriken/Fischer.js"></script>
+
     <script type="text/javascript" src="main.js"></script>
 
 
