--- a/Server/Client/index.html
+++ b/Server/Client/index.html
@@ -17,6 +17,7 @@
 
     <script type="text/javascript" src="Karte/Karte.js"></script>
     <script type="text/javascript" src="Karte/Kartengenerator.js"></script>
+    <script type="text/javascript" src="UI/SimpleMenu.js"></script>
 
     <script type="text/javascript" src="UI/MainUI.js"></script>
     <script type="text/javascript" src="UI/BauUI.js"></script>
