rohstoffe und fabriken hinzugefügt

--- a/Server/Client/index.html
+++ b/Server/Client/index.html
@@ -40,6 +40,11 @@
     <script type="text/javascript" src="Rohstoffe/Brett.js"></script>
     <script type="text/javascript" src="Rohstoffe/Kohle.js"></script>
     <script type="text/javascript" src="Rohstoffe/Stein.js"></script>
+    <script type="text/javascript" src="Rohstoffe/Brot.js"></script>
+    <script type="text/javascript" src="Rohstoffe/Fisch.js"></script>
+    <script type="text/javascript" src="Rohstoffe/Salz.js"></script>
+    <script type="text/javascript" src="Rohstoffe/Weintraube.js"></script>
+    <script type="text/javascript" src="Rohstoffe/Weizen.js"></script>
 
     <script type="text/javascript" src="Haus/AbstractHaus.js"></script>
     <script type="text/javascript" src="Haus/Farmer.js"></script>
@@ -49,6 +54,11 @@
     <script type="text/javascript" src="Fabriken/Holzfaeller.js"></script>
     <script type="text/javascript" src="Fabriken/Kohlewerk.js"></script>
     <script type="text/javascript" src="Fabriken/Steinmetz.js"></script>
+    <script type="text/javascript" src="Fabriken/Baecker.js"></script>
+    <script type="text/javascript" src="Fabriken/Bauer.js"></script>
+    <script type="text/javascript" src="Fabriken/Fischer.js"></script>
+    <script type="text/javascript" src="Fabriken/Salzmine.js"></script>
+
     <script type="text/javascript" src="main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <style>
